--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -1,5 +1,5 @@
 /* stylelint-disable */
-@import "../../assets/css/styles.scss";
+@import '../../assets/css/styles.scss';
 /* stylelint-enable */
 
 .main-container {
