--- a/frontend/src/components/profile-settings/styles.scss
+++ b/frontend/src/components/profile-settings/styles.scss
@@ -48,12 +48,12 @@
 }
 
 .stepper .stepper__step:after {
-  content: " ";
+  content: ' ';
   position: absolute;
   top: 38px;
   width: 100%;
   height: 1px;
-  background-color: #808C9C;
+  background-color: #808c9c;
 }
 
 .stepper__step:last-child:after {
