--- a/frontend/src/components/profile/components/profile-info/profile-main/profile-main.scss
+++ b/frontend/src/components/profile/components/profile-info/profile-main/profile-main.scss
@@ -7,7 +7,7 @@
 }
 
 .left-side {
-  width: 59%
+  width: 59%;
 }
 
 .right-side {
@@ -21,7 +21,7 @@
   &__title {
     line-height: 17px;
     text-align: left;
-    color:  #808C9C;
+    color: #808c9c;
     width: 100%;
   }
 }
