--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -5,8 +5,11 @@
 .main-container {
   margin-left: 4em;
   margin-top: 5em;
+
   @include media-breakpoint-up(md) {
     margin-left: 16.875em;
     margin-top: 6.25em;
+
+    padding: 0px !important;
   }
 }
