feat: update styles conflicts

--- a/frontend/src/assets/scss/buttons.scss
+++ b/frontend/src/assets/scss/buttons.scss
@@ -1,11 +1,9 @@
-@import '~bootstrap/scss/variables';
-
 .btn {
   border-radius: 70px !important;
 }
 
 .btn-hover-gu-purple:hover {
-  color: $purple-dark !important;
+  color: $gu-blue !important;
 }
 
 .btn-hover-gu-white:hover {
