--- a/frontend/src/components/sidebar/styles.scss
+++ b/frontend/src/components/sidebar/styles.scss
@@ -1,6 +1,4 @@
-/* stylelint-disable */
-@import '../../assets/css/styles.scss';
-/* stylelint-enable */
+@import '~assets/scss/utils';
 
 .sidebar-section {
   z-index: 3;
