--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -1,6 +1,4 @@
-/* stylelint-disable */
-@import '../../assets/css/styles.scss';
-/* stylelint-enable */
+@import '~assets/scss/utils.scss';
 
 .main-container {
   margin-left: 4em;
