--- a/frontend/src/components/header/styles.scss
+++ b/frontend/src/components/header/styles.scss
@@ -1,6 +1,4 @@
-/* stylelint-disable */
-@import '../../assets/css/styles.scss';
-/* stylelint-enable */
+@import '~assets/scss/utils.scss';
 
 $white-blue: #f0f3f9;
 
