fix: updated styles

--- a/frontend/src/components/profile-settings/steps/interests-block.scss
+++ b/frontend/src/components/profile-settings/steps/interests-block.scss
@@ -1,15 +1,13 @@
-@import 'src/assets/css/styles';
+@import 'src/assets/scss/utils';
 
 .interests {
-  border-radius: 10px;
   margin: 12px 0;
 }
 
 .interests-header {
   border-radius: 10px 10px 0 0;
-  background-color: #463da8;
   padding: 26px 38px;
-  border-bottom: 1px solid #e1dbea;
+  border-bottom: 1px solid $gu-white;
 
   &__title {
     line-height: 25px;
@@ -17,8 +15,7 @@
 
   &__edit {
     padding: 6px 23px;
-    color: #f6f7f9;
-    border: 2px solid #f6f7f9;
+    border: 2px solid $gu-white;
     border-radius: 30px;
     line-height: 22px;
   }
@@ -34,27 +31,16 @@
 }
 
 @include media-breakpoint-down(xl) {
-  .interests {
-    margin: 0;
-    border-radius: 0;
-  }
-
   .interests-header {
-    background-color: #463da8;
-
     &__edit {
-      color: #f6f7f9;
-      border: 2px solid #f6f7f9;
+      border: 2px solid $gu-white;
     }
   }
 }
 
 @include media-breakpoint-down(lg) {
   .interests-header {
-    color: #f6f7f9;
-
     &__edit {
-      position: relative;
       width: 50px;
       height: 50px;
       border-radius: 100%;
