--- a/frontend/src/components/profile-settings/styles.scss
+++ b/frontend/src/components/profile-settings/styles.scss
@@ -1,50 +1,32 @@
+@import 'src/assets/scss/utils';
+
 .stepper {
-  position: relative;
   margin: 5%;
 }
 
 .stepper__panel {
-  position: relative;
-  display: table;
   table-layout: fixed;
   border-collapse: collapse;
   margin-bottom: 10%;
 }
 
 .stepper__step {
-  position: relative;
-  display: table-cell;
   text-align: center;
 }
 
-.stepper__indicator {
-  position: relative;
-  display: block;
-}
-
 .stepper__info {
-  position: relative;
-  display: inline-block;
   width: 75px;
   height: 75px;
   line-height: 75px;
   border-radius: 50%;
-  background-color: #a6b6c3;
-  font-size: 25px;
+  background-color: $gray-500;
   text-align: center;
   z-index: 1;
 }
 
 .stepper__actions {
-  display: flex;
-  justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
-}
-
-.stepper__buttons {
-  justify-content: space-between;
 }
 
 .stepper__form {
@@ -57,7 +39,7 @@
   top: 38px;
   width: 100%;
   height: 1px;
-  background-color: #808c9c;
+  background-color: $gray-500;
 }
 
 .stepper__step:last-child:after {
@@ -66,8 +48,8 @@
 
 .stepper__step.is-complete .stepper__info,
 .stepper__step.is-active .stepper__info {
-  background-color: #463da8;
-  color: #f6f7f9;
+  background-color: $gu-blue;
+  color: $gu-white;
 }
 
 @media (max-width: 1200px) {
