--- a/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
+++ b/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
@@ -1,5 +1,9 @@
 @import 'src/assets/css/styles';
 
+button:active, button:focus {
+  outline: none !important;
+}
+
 .edit-section {
   border-radius: 10px;
   margin: 12px 0;
@@ -21,6 +25,18 @@
     border: 2px solid #EE2A64;
     border-radius: 30px;
     line-height: 22px;
+    transition: all 0.2s ease 0s;
+  }
+
+  &__edit:hover {
+    color: $gu-white!important;
+    background-color:#ee2a64!important;
+    border-color: #ee2a64!important;
+    transition: all 0.2s ease 0s;
+  }
+
+  &__edit:focus {
+    box-shadow: 0 0 0 0.25rem rgb(238 42 100 / 50%);
   }
 
   &__edit-icon {
