--- a/frontend/src/components/work-quiz/styles.scss
+++ b/frontend/src/components/work-quiz/styles.scss
@@ -1,10 +1,12 @@
+@import 'assets/scss/utils.scss';
+
 .test-submit {
-  background-color: #463da8 !important;
+  background-color: $gu-blue !important;
   border: none !important;
   padding: 0.5em 3em !important;
 }
 
 .test-submit_disabled {
-  background-color: #6b6293 !important;
+  background-color: $gu-blue !important;
   border: none !important;
 }
