fix: small changes

--- a/frontend/src/components/main-page/notifications/notification.scss
+++ b/frontend/src/components/main-page/notifications/notification.scss
@@ -11,6 +11,7 @@
 .notification {
   cursor: pointer;
   transition: all 0.5s linear;
+  color: #000 !important;
   &:hover {
     background-color: rgba(207, 204, 204, 0.781) !important;
   }
