feat: admin can logout

--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -1,5 +1,6 @@
 @import '~assets/scss/utils';
 
+// FIX: This breaks admin page!
 .wrapper {
   display: grid;
   grid-template-columns: minmax(273px, auto) 1fr;
