--- a/frontend/src/components/main-page/opportunities/opportunities.scss
+++ b/frontend/src/components/main-page/opportunities/opportunities.scss
@@ -1,10 +1,10 @@
 .opportunities {
   &__cart {
     cursor: pointer;
-    transition: all 0.5s linear;
-    &:hover {
-      background-color: rgba(207, 204, 204, 0.781) !important;
-    }
+    // transition: all 0.5s linear;
+    // &:hover {
+    //   background-color: rgba(207, 204, 204, 0.781) !important;
+    // }
   }
   &__cart--text {
     max-width: 70%;
