--- a/frontend/src/components/sidebar/styles.scss
+++ b/frontend/src/components/sidebar/styles.scss
@@ -1,4 +1,6 @@
-@import '~assets/scss/utils';
+/* stylelint-disable */
+@import '../../assets/scss/styles.scss';
+/* stylelint-enable */
 
 .sidebar-section {
   z-index: 3;
