--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -1,4 +1,6 @@
-@import '~assets/scss/utils';
+/* stylelint-disable */
+@import '../../assets/scss/styles.scss';
+/* stylelint-enable */
 
 .main-container {
   margin-left: 4em;
