--- a/frontend/src/components/header/styles.scss
+++ b/frontend/src/components/header/styles.scss
@@ -1,4 +1,6 @@
-@import '~assets/scss/utils';
+/* stylelint-disable */
+@import '../../assets/scss/styles.scss';
+/* stylelint-enable */
 
 $white-blue: #f0f3f9;
 
