--- a/frontend/src/components/skills/styles.scss
+++ b/frontend/src/components/skills/styles.scss
@@ -39,6 +39,10 @@ $defaultSkillLvlCount: 10;
   transform-origin: 0 -10%;
 }
 
+.sort-button {
+  border-radius: 50%;
+}
+
 .button-group {
   margin-left: 80px;
 }
