--- a/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
+++ b/frontend/src/components/profile/components/profile-info/edit-section/edit-section.scss
@@ -36,7 +36,7 @@ button:focus {
     transition: all 0.2s ease 0s;
   }
 
-  &__edit:focus {
+  &__edit:active {
     box-shadow: 0 0 0 0.25rem rgb(238 42 100 / 50%);
   }
 
