--- a/frontend/src/components/common/auto-complete/styles.scss
+++ b/frontend/src/components/common/auto-complete/styles.scss
@@ -33,3 +33,8 @@ button.close {
   border-color: $gray-500;
   box-shadow: 0 0 0 2px $purple-100;
 }
+
+.form-control:focus {
+  border-color: $gray-500 !important;
+  box-shadow: 0 0 0 2px $purple-100 !important;
+}
