--- a/frontend/src/components/profile/components/profile-info/header/header.scss
+++ b/frontend/src/components/profile/components/profile-info/header/header.scss
@@ -1,4 +1,4 @@
-@import '~assets/scss/utils';
+@import 'src/assets/scss/utils';
 
 .profile-header {
   width: 100%;
@@ -11,8 +11,7 @@
   position: relative;
 
   &__avatar {
-    width: 148px;
-    height: 148px;
+    background-size: contain;
   }
 
   &__edit {
