--- a/frontend/src/components/admin/companies/addedit-company/styles.scss
+++ b/frontend/src/components/admin/companies/addedit-company/styles.scss
@@ -5,7 +5,7 @@
     background-color: var(--bs-white);
   }
 
-  img {
+  img.modal-company-image {
     width: 50px;
     height: 50px;
     align-self: center;
