#90 Fixed admin page

--- a/frontend/src/components/app/app.scss
+++ b/frontend/src/components/app/app.scss
@@ -1,6 +1,4 @@
-@import 'src/assets/scss/utils';
-
-// FIX: This breaks admin page!
+@import '~assets/scss/utils.scss';
 .wrapper {
   display: grid;
   grid-template-columns: minmax(273px, auto) 1fr;
