--- a/frontend/src/components/common/modal/styles.scss
+++ b/frontend/src/components/common/modal/styles.scss
@@ -23,10 +23,10 @@
     background-color: $gu-white;
   }
 
-  img {
-    width: 50px;
-    height: 50px;
-    align-self: center;
+  .modal-footer {
+    align-self: start;
+    padding: 25px 50px;
+    background-color: $gu-white;
   }
 }
 
