fix: fixed problems

--- a/frontend/src/components/profile/components/profile-info/education-card/education-card.scss
+++ b/frontend/src/components/profile/components/profile-info/education-card/education-card.scss
@@ -10,7 +10,7 @@
     line-height: 25px;
   }
 
-  &__universitet {
+  &__university {
     color: #5c5d5f;
   }
 
@@ -18,7 +18,7 @@
     color: #1d1d1d;
   }
 
-  &__universitet,
+  &__university,
   &__degree {
     font-weight: 600;
     line-height: 19px;
