fix: updated styles for modal

--- a/frontend/src/components/common/modal/styles.scss
+++ b/frontend/src/components/common/modal/styles.scss
@@ -24,8 +24,9 @@
   }
 
   .modal-footer {
-    align-self: start;
+    width: 100%;
     padding: 25px 50px;
+    justify-content: start;
     background-color: $gu-white;
   }
 }
