add dropdown list & calender

--- a/frontend/src/components/common/modal/styles.scss
+++ b/frontend/src/components/common/modal/styles.scss
@@ -14,7 +14,6 @@
 
   .modal-header {
     background-color: $white;
-    border-radius: 15px 15px 0 0;
     padding: 25px;
   }
 
@@ -23,8 +22,7 @@
   }
 
   .modal-footer {
-    align-self: start;
-    padding: 25px 50px;
+    align-self: end;
   }
 }
 
