feat: added sorting and fixed date field

--- a/frontend/src/assets/scss/typography.scss
+++ b/frontend/src/assets/scss/typography.scss
@@ -11,3 +11,11 @@ $custom-font-sizes: (
 
 $font-sizes: map-merge($font-sizes, $custom-font-sizes);
 /* stylelint-enable */
+
+.text-purple {
+  color: $gu-purple !important;
+}
+
+.text-blue {
+  color: $gu-blue !important;
+}
