--- a/frontend/src/components/profile/qualities/styles.scss
+++ b/frontend/src/components/profile/qualities/styles.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/variables.scss';
+@import '../../../assets/scss/variables';
 
 .quality__more-info {
   cursor: pointer;
