#80 Fixed some moments after PR

--- a/frontend/src/components/profile/qualities/styles.scss
+++ b/frontend/src/components/profile/qualities/styles.scss
@@ -1,7 +1,6 @@
-@import '../../../assets/scss/variables';
+@import '~assets/scss/utils';
 
 .quality__more-info {
-  cursor: pointer;
   transition: all 0.2s ease-in-out;
   &:hover {
     color: $gu-blue !important;
