feat: add select skills

--- a/frontend/src/components/skills/styles.scss
+++ b/frontend/src/components/skills/styles.scss
@@ -39,6 +39,11 @@ $defaultSkillLvlCount: 10;
   transform-origin: 0 -10%;
 }
 
+.select-favorite {
+  margin-right: 200px;
+  width: 200px;
+}
+
 .sort-button {
   border-radius: 50%;
 }
