fix: updated styles

--- a/frontend/src/components/career-path/flow/level-flow.scss
+++ b/frontend/src/components/career-path/flow/level-flow.scss
@@ -1,6 +1,7 @@
 .level-flow {
   z-index: 0;
   height: 825px;
-  min-width: 850px;
+  min-width: 600px;
+  max-width: 920px;
   border-radius: 10px;
 }
