#121 Commit after PR.Fixed styles in admin components.

--- a/frontend/src/components/admin/styles.scss
+++ b/frontend/src/components/admin/styles.scss
@@ -7,11 +7,6 @@
 }
 .user-control-btn {
   margin-right: 1rem;
-
-  @media screen and (max-width: 767px) {
-    margin-right: 0 !important;
-    margin-bottom: 10px !important;
-  }
 }
 @include media-breakpoint-down(lg) {
   .btn-responsive {
@@ -20,7 +15,12 @@
     }
   }
 }
-
+@include media-breakpoint-down(md) {
+  .user-control-btn {
+    margin-right: 0 !important;
+    margin-bottom: 10px !important;
+  }
+}
 @include media-breakpoint-down(sm) {
   .btn-responsive {
     & > span {
