--- a/frontend/src/components/profile/edit-section/styles.scss
+++ b/frontend/src/components/profile/edit-section/styles.scss
@@ -60,8 +60,8 @@ button:focus {
     color: #fff;
 
     &__edit {
-      color: #fff;
-      border: 2px solid #fff;
+      color: #fff !important;
+      border: 2px solid #fff !important;
     }
     &__edit:hover {
       background-color: #fff !important;
