--- a/frontend/src/components/app/styles.scss
+++ b/frontend/src/components/app/styles.scss
@@ -14,6 +14,11 @@
   }
 }
 
+.wrapper__burger-active {
+  grid-template-columns: 65px 1fr;
+  grid-template-rows: 78px 1fr;
+}
+
 .header-wrapper {
   grid-area: header;
 }
@@ -21,7 +26,6 @@
 .sidebar-wrapper {
   grid-area: sidebar;
 }
-
 .main-wrapper {
   grid-area: main;
 }
