--- a/frontend/src/components/opportunities/styles.scss
+++ b/frontend/src/components/opportunities/styles.scss
@@ -1,4 +1,5 @@
 @import '~assets/scss/utils';
+@import '~assets/scss/variables';
 
 .follow {
   cursor: pointer;
@@ -19,4 +20,9 @@
 
 .opportunity_type:focus {
   box-shadow: 0 0 0 2px #dcccf0 !important;
+}
+
+.multi-select li:hover,
+.highlightOption {
+  background-color: $gu-blue;
 }
