--- a/frontend/src/components/okr/tabs/styles.scss
+++ b/frontend/src/components/okr/tabs/styles.scss
@@ -17,3 +17,10 @@
     color: $gu-black;
   }
 }
+
+.hover-pink {
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    color: $gu-pink !important;
+  }
+}
