--- a/frontend/src/components/career-path/level-description/level-description.scss
+++ b/frontend/src/components/career-path/level-description/level-description.scss
@@ -26,7 +26,7 @@
 
 @media (max-width: 1500px) {
   .level-description {
-    max-width: max-content;
+    max-width: inherit;
     margin: 10px 0;
     height: 100%;
   }
