--- a/frontend/src/components/opportunities/styles.scss
+++ b/frontend/src/components/opportunities/styles.scss
@@ -25,5 +25,5 @@
 .multi-select li:hover,
 .highlightOption,
 .searchWrapper span {
-  background-color: $gu-blue;
+  background-color: $gu-blue !important;
 }
