--- a/frontend/src/components/okr/styles.scss
+++ b/frontend/src/components/okr/styles.scss
@@ -15,8 +15,8 @@
 }
 
 .okr-disable {
-  background-color: #8080801f !important;
-  color: #a7a5a5e0 !important;
+  background-color: #8080801f;
+  color: #a7a5a5e0;
   svg {
     color: #a7a5a5e0 !important;
   }
