fix: components position

--- a/frontend/src/components/admin/styles.scss
+++ b/frontend/src/components/admin/styles.scss
@@ -32,3 +32,11 @@
 #tooltip-disabled {
   background: none;
 }
+
+.actions-column {
+  margin-left: 14px;
+}
+
+.role-column {
+  margin-right: 1px;
+}
