Added dropdown instead textfield

--- a/frontend/src/components/opportunities/styles.scss
+++ b/frontend/src/components/opportunities/styles.scss
@@ -18,6 +18,11 @@
   }
 }
 
+.select-type__item:hover {
+  background-color: $gu-blue;
+  color: white;
+}
+
 .opportunity_type:focus {
   box-shadow: 0 0 0 2px #dcccf0 !important;
 }
