#132 Changed field type in opportunity

--- a/frontend/src/components/opportunities/styles.scss
+++ b/frontend/src/components/opportunities/styles.scss
@@ -17,12 +17,6 @@
     }
   }
 }
-
-.select-type__item:hover {
-  background-color: $gu-blue;
-  color: white;
-}
-
 .opportunity_type:focus {
   box-shadow: 0 0 0 2px #dcccf0 !important;
 }
@@ -31,4 +25,10 @@
 .highlightOption,
 .searchWrapper span {
   background-color: $gu-blue;
+}
+
+.select {
+  & * {
+    cursor: pointer !important;
+  }
 }
