--- a/frontend/src/components/sidebar/styles.scss
+++ b/frontend/src/components/sidebar/styles.scss
@@ -22,17 +22,9 @@
     transition: all 0.7s ease-in-out;
     width: 15px;
     height: 15px;
-    color: $white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
-  border-radius: 50%;
-  position: absolute;
   top: 4%;
   left: 93%;
-  background-color: $gu-purple;
 }
 .sidebar-section {
   z-index: 3;
@@ -54,8 +46,6 @@
 .logo-title {
   line-height: 1.38em;
   font-weight: bold;
-  transition: width 0.7s ease-in-out;
-  animation: textShowTitle 0.7s ease-in-out 1 normal forwards;
 }
 .navigation-section__list {
   @include media-breakpoint-down(md) {
@@ -112,12 +102,10 @@
 .navigation-section__burger-active {
   margin-top: 4rem;
 }
-
-.navigation-link__title {
+.title-anim {
   transition: width 0.7s ease-in-out;
   animation: textShowTitle 0.7s ease-in-out 1 normal forwards;
 }
-
 .sidebar-container--small-version {
   width: 65px;
   .navigation-link {
@@ -126,11 +114,7 @@
       max-height: none !important;
     }
   }
-  .navigation-link__title {
-    width: 0%;
-    display: none;
-  }
-  .logo-title {
+  .title-anim {
     width: 0%;
     display: none;
   }
@@ -143,7 +127,7 @@
     border-radius: 33%;
   }
   .sidebar__burger svg {
-    transform: translate(-50%, -50%) rotate(-180deg);
+    transform: translate(-50%, -50%) rotate(-180deg) !important;
   }
 }
 
