--- a/frontend/src/components/sidebar/styles.scss
+++ b/frontend/src/components/sidebar/styles.scss
@@ -10,7 +10,7 @@
   100% {
     width: 100%;
     display: block;
-    overflow: hidden;
+    overflow: visible;
   }
 }
 
@@ -23,7 +23,7 @@
     width: 15px;
     height: 15px;
   }
-  top: 4%;
+  top: 3.5%;
   left: 93%;
 }
 .sidebar-section {
@@ -46,6 +46,7 @@
 .logo-title {
   line-height: 1.38em;
   font-weight: bold;
+  white-space: nowrap;
 }
 .navigation-section__list {
   @include media-breakpoint-down(md) {
@@ -106,6 +107,7 @@
   transition: width 0.7s ease-in-out;
   animation: textShowTitle 0.7s ease-in-out 1 normal forwards;
 }
+
 .sidebar-container--small-version {
   width: 65px;
   .navigation-link {
