fix: changed color for tags

--- a/frontend/src/components/main-page/opportunities/styles.scss
+++ b/frontend/src/components/main-page/opportunities/styles.scss
@@ -12,6 +12,8 @@
   &__cart--tags-item {
     opacity: 0.4;
     padding: 2px 0;
+    background: #c6c6c6 !important;
+    color: white !important;
   }
   &__type {
     color: #989898;
