--- a/frontend/src/components/okr/tabs/styles.scss
+++ b/frontend/src/components/okr/tabs/styles.scss
@@ -24,3 +24,28 @@
     color: $gu-pink !important;
   }
 }
+.tabs {
+  button {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  li:first-child {
+    padding-left: 5px;
+    margin-right: 20px;
+  }
+}
+.OKR-page {
+  display: grid;
+  grid-template-columns: minmax(285px, 1fr) minmax(285px, 1fr) minmax(
+      285px,
+      1fr
+    );
+  row-gap: 20px;
+  column-gap: 20px;
+}
+
+.tabs__tab {
+  c button {
+    padding: 0;
+  }
+}
