--- a/frontend/src/components/sidebar/styles.scss
+++ b/frontend/src/components/sidebar/styles.scss
@@ -17,6 +17,10 @@
 .sidebar__burger {
   width: 30px;
   height: 30px;
+  transition: all 0.7s ease-in-out;
+  &:hover {
+    background-color: $gu-purple !important;
+  }
 
   svg {
     transition: all 0.7s ease-in-out;
