--- a/frontend/src/components/okr/tabs/styles.scss
+++ b/frontend/src/components/okr/tabs/styles.scss
@@ -4,6 +4,7 @@
   display: flex !important;
   flex-direction: column;
 }
+
 .hover-blue {
   transition: all 0.3s ease-in-out;
   &:hover {
@@ -24,28 +25,23 @@
     color: $gu-pink !important;
   }
 }
-.tabs {
-  button {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
-  li:first-child {
-    padding-left: 5px;
-    margin-right: 20px;
-  }
-}
 .OKR-page {
   display: grid;
-  grid-template-columns: minmax(285px, 1fr) minmax(285px, 1fr) minmax(
-      285px,
-      1fr
-    );
+  grid-template-columns: repeat(auto-fill, 285px);
   row-gap: 20px;
   column-gap: 20px;
 }
 
-.tabs__tab {
-  button {
-    padding: 0;
+.okr-tab__active {
+  position: relative;
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 23px;
+    left: 0;
+    width: 100%;
+    background-color: $gu-blue;
+    height: 2px;
   }
 }
