--- a/frontend/src/components/sidebar/styles.scss
+++ b/frontend/src/components/sidebar/styles.scss
@@ -19,15 +19,16 @@
   height: 30px;
   transition: all 0.7s ease-in-out;
   &:hover {
-    background-color: $gu-purple !important;
+    background-color: rgba(41, 25, 101, 0.9) !important;
   }
+  border: 1px solid white;
 
   svg {
     transition: all 0.7s ease-in-out;
     width: 15px;
     height: 15px;
   }
-  top: 7.5%;
+  top: 10.5%;
   left: 93%;
 }
 .sidebar-section {
