--- a/frontend/src/components/main-page/opportunities/styles.scss
+++ b/frontend/src/components/main-page/opportunities/styles.scss
@@ -1,3 +1,5 @@
+@import '~assets/scss/utils';
+
 .opportunities {
   &__cart {
     cursor: pointer;
@@ -10,10 +12,8 @@
     max-width: 100%;
   }
   &__cart--tags-item {
-    opacity: 0.4;
     padding: 2px 0;
-    background: #c6c6c6 !important;
-    color: white !important;
+    background-color: $purple-light;
   }
   &__type {
     color: #989898;
