--- a/frontend/src/components/admin/styles.scss
+++ b/frontend/src/components/admin/styles.scss
@@ -40,3 +40,12 @@
 .role-column {
   margin-right: 1px;
 }
+.email-text {
+  @media screen and (max-width: 600px) {
+    max-width: 60px;
+    width: 60px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
